--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Aventura JS</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/animaciones.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 
 <body>
