--- a/index.html
+++ b/index.html
@@ -129,23 +129,53 @@
                 <tbody>
                     <tr>
                         <td>Jugador</td>
-                        <td>1500</td>
-                        <td>500</td>
+                        <td>2500</td>
+                        <td>1200</td>
                     </tr>
                     <tr>
                         <td>Abel</td>
-                        <td>1200</td>
-                        <td>450</td>
+                        <td>2100</td>
+                        <td>950</td>
+                    </tr>
+                    <tr>
+                        <td>Carlos</td>
+                        <td>1950</td>
+                        <td>850</td>
                     </tr>
                     <tr>
                         <td>Julian</td>
-                        <td>800</td>
-                        <td>300</td>
+                        <td>1800</td>
+                        <td>750</td>
                     </tr>
                     <tr>
                         <td>Maria</td>
-                        <td>950</td>
-                        <td>400</td>
+                        <td>1650</td>
+                        <td>700</td>
+                    </tr>
+                    <tr>
+                        <td>Lucia</td>
+                        <td>1500</td>
+                        <td>650</td>
+                    </tr>
+                    <tr>
+                        <td>Diego</td>
+                        <td>1350</td>
+                        <td>600</td>
+                    </tr>
+                    <tr>
+                        <td>Sofia</td>
+                        <td>1200</td>
+                        <td>550</td>
+                    </tr>
+                    <tr>
+                        <td>Pedro</td>
+                        <td>1050</td>
+                        <td>500</td>
+                    </tr>
+                    <tr>
+                        <td>Elena</td>
+                        <td>900</td>
+                        <td>450</td>
                     </tr>
                 </tbody>
             </table>
